# TMR2025

./: BufferVoiceRecorder.cpp  BufferVoiceRecorder.h  CMakeLists.txt  HazmatLabel.cpp  HazmatLabel.h  ImageLabel.cpp  ImageLabel.h  PredictionsData.h  QRDisplayer.cpp  QRDisplayer.h  QRLabel.cpp  QRLabel.h  RecoWidget.cpp  RecoWidget.h  Susurrador.cpp  Susurrador.h  VideoLabel.cpp  VideoLabel.h  VideoRecoWidget.cpp  VideoRecoWidget.h  VoiceDisplayer.cpp  VoiceDisplayer.h  VoiceRecoWidget.cpp  VoiceRecoWidget.h  VoiceRecorder.cpp  VoiceRecorder.h  YOLOv8Displayer.cpp  YOLOv8Displayer.h  YOLOv8Model.cpp  YOLOv8Model.h  hazmatClasses.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
